--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,19 +1,28 @@
 .item {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: row-reverse;
     flex-wrap: wrap;
-    background-color: azure;
+    background-color: rgb(235, 235, 234);
     outline: none;
     border-radius: 10px;
+    margin: 1rem;
 }
 
-.item div {
+.item .title {
     font: inherit;
     font-weight: bold;
     font-size: large;
     color: rgb(7, 6, 6);
+    margin: 1.5rem 1rem 1rem 10rem;
+    text-align: center;
 }
 
 .crossed {
     text-decoration: line-through;
+}
+
+.controls {
+    display: flex;
+    flex-direction: row-reverse;
 }
