--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -26,3 +26,12 @@
     display: flex;
     flex-direction: row-reverse;
 }
+
+.fade-out {
+    animation: fOut 0.8s linear forwards;
+}
+
+@keyframes fOut {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+}
